--- a/scc/flights.css
+++ b/scc/flights.css
@@ -1,18 +1,16 @@
 body {
-    margin: auto;
+    margin: 0;
 }
 
 .bg-img {
     background-image: url("../assets/Background_2.png");
-    height: 40em;
+    height: 400px;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
 }
-  
 .container {
     position: absolute;
-    margin-top: 40px;
-    width: auto;
+    margin-top: 50px;
     margin-left: 100px;
 }
   
@@ -23,7 +21,7 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 20px 40px;
-    width: 1800px;
+    width: 130%;
     border-radius: 40px;
 }
   
@@ -70,7 +68,7 @@ body {
 }
 
 .search-form input[type="text"] {
-    padding: 8px 30px 8px 8px; 
+    padding: 8px 0px 8px 7px; 
     border: 1px solid #ccc;
     border-radius: 4px;
     width: 200px; 
@@ -79,172 +77,393 @@ body {
 
 .search-form i {
     position: absolute;
-    right: 10px;
+   
     top: 50%;
     transform: translateY(-50%);
     color: #333;
     cursor: pointer;
+} 
+
+.flexContainer{
+    display:flex;
+    flex-direction: row;
+    font-size: 16px;
+    text-align: justify;
+    justify-content: center;
+    align-items: center;
 }
 
-.red-heading {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    margin-left: 100px;
-    color: #E51728;
-    font-size: 60px;
-    margin-bottom: 35px; 
-    font-family: 'Porter Sans Block', sans-serif;
-}
-
-.h1{
-    margin-top: ;
-    font-family: 'Porter sans block';
-    color: #000000;
-}
-
-footer {
-    width: 100%;
-    background-color: #333; 
-    color: #fff; 
-    text-align: center; 
-    padding: 20px 0; 
+.flexitem2 img{
+    padding: 20%;
+    width: 65%;
+    border-radius: 5%;
+    height: 650px;
+    margin-top: -70px;
 }
   
-.frame .div {
+.flexitem2{
+    flex: 50%;
+}
+
+h1{
+    position: absolute;
+    margin-top: 100px;
+    margin-left: 760px;
+    font-family: 'Poppins';
+    font-size: 48px;
+}
+
+h2{
+    position: absolute;
+    margin-top: 100px;
+    margin-left: 760px;
+    font-family: 'Poppins';
+    font-size: 48px;
+    color: #ffffff;
+}
+  
+.paragraph{
+    margin-top: -90px;
+    position: absolute;
+    width: 620px;
+    font-size: 18px;
+    font-family: 'Poppins';
+    color: rgb(0, 0, 0);
+    line-height: 1.8;
+    justify-content: left;
+}
+
+.bgColour {
+    background-color: #45016E;
+    width: 100%;
+    height: 50em;
+    position: relative;
+}
+
+.bgColour1 {
     background-color: #ffffff;
     width: 100%;
-    height: 65em;
+    height: 50em;
     position: relative;
 }
 
-.frame2 .div2 {
-    background-color: #460066;
+.bgColour3 {
+    background-color: #45016E;
     width: 100%;
-    height: 65em;
+    height: 100px;
     position: relative;
 }
 
-.images {
-    width: 600px;
-    height: 800px;
-    top: 8em;
-    left: 10em;
-    position: absolute;
-}
-
-.images2 {
-    width: 600px;
-    height: 800px;
-    top: 8em;
-    left: 10em;
-    position: absolute;
-}
-  
-.numbers {
-    padding: 10px;
-    margin-left: 890px ;
-    margin-top: 580px;
-    width: 130px;
-    height: 80px;
-    position: absolute;
-    background-color: #6915a9;
-    color:#000000;
-    border: none;
-    border-radius: 10%;
-}
-
-.numbers2 {
-    padding: 10px;
-    margin-left: 890px ;
-    margin-top: 580px;
-    width: 130px;
-    height: 80px;
-    position: absolute;
-    background-color: #5ec9e4;
-    color:#ffffff;
-    border: none;
-    border-radius: 10%;
-}
-
-.button {
-    margin-left: 1070px;
-    margin-top: 580px;
+button {
+    margin-top: 140px;
+    margin-left: 20px;
     cursor: pointer;
-    height: 99px;
-    width: 300px;
-    border: none;
-    background-color: #E51728;
+    height: 70px;
+    width: 270px;
+    background-color: #ff0015;
     color:#ffffff ;
-    padding: 10px;
-    font-size: 30px;
-    border-radius:10px ;
+    font-size: 20px;
+    border-radius:12px ;
+    font-family: 'Poppins';
 }
 
-.button2 {
-    margin-left: 1070px;
-    margin-top: 580px;
+.buttonSmall{
+    margin-top: 140px;
     cursor: pointer;
-    height: 99px;
-    width: 300px;
-    border: none;
-    background-color: #E51728;
-    color:#ffffff ;
-    padding: 10px;
-    font-size: 30px;
-    border-radius:10px ;
-}
-  
-.heading {
-    position: absolute;
-    width: 900px;
-    top: 120px;
-    left: 880px;
-    font-family: "Inter-Regular", Helvetica;
-    font-weight: 600;
-    color: #000000;
-    font-size: 60px;
-    letter-spacing: 0;
-    line-height: normal;
+    height: 70px;
+    width: 100px;
+    background-color: #45016E;
+    color: #ffffff;
+    font-size: 20px;
+    border-radius:12px ;
+    font-family: 'Poppins', semibold;
+    float: left;
 }
 
-.heading2 {
+.line{
+    margin-top: 20px;
     position: absolute;
-    width: 900px;
-    top: 120px;
-    left: 880px;
-    font-family: "Inter-Regular", Helvetica;
-    font-weight: 600;
+    margin-right: 70px;
+    width: 40%;
+} 
+
+.sku{
+    line-height: 0.1;
+    margin-top: 50px;
+    position: absolute;
+    color: #535252;
+}
+
+.sku1{
+    font-size: 15px;
+    font-family: 'Poppins';
+    line-height: 0.1;
+    margin-top: 90px;
+    position: absolute;
+    color: #535252;
+}
+
+.sku2{
+    font-size: 15px;
+    font-family: 'Poppins';
+    line-height: 0.1;
+    margin-top: 130px;
+    position: absolute;
+    color: #535252;
+}
+
+.sku3{
+    font-size: 15px;
+    font-family: 'Poppins';
+    line-height: 0.1;
+    margin-top: 170px;
+    position: absolute;
+    color: #535252;
+}
+
+.afterLine{
+    font-size: 15px;
+    font-family: 'Poppins';
+    position: absolute;
+    margin-top: 40px;
+    color: #535252;
+    margin-left: 90px;
+} 
+
+.afterLine1{
+    font-size: 15px;
+    font-family: 'Poppins';
+    position: absolute;
+    margin-top: 80px;
+    color: #535252;
+    margin-left: 90px;
+} 
+
+.afterLine2{
+    font-size: 15px;
+    font-family: 'Poppins';
+    position: absolute;
+    margin-top: 120px;
+    color: #535252;
+    margin-left: 90px;
+} 
+
+.afterLine3{
+    font-size: 15px;
+    font-family: 'Poppins';
+    position: absolute;
+    margin-top: 160px;
+    color: #535252;
+    margin-left: 90px;
+} 
+
+
+.buttonSmall2{
+    margin-top: 140px;
+    cursor: pointer;
+    height: 70px;
+    width: 100px;
+    background-color: #51BFD8;
     color: #ffffff;
-    font-size: 60px;
-    letter-spacing: 0;
-    line-height: normal;
+    font-size: 20px;
+    border-radius:12px ;
+    font-family: 'Poppins', semibold;
+    float: left;
 }
-  
-.paragraph {
+
+.button1{
+    background-color: #ffffffac;
+    margin-left: 1200px;
+    height: 55px;
+    width: 190px;
+    border-radius: 15px;
+    text-align: center;
+    margin-top: 23px;
     position: absolute;
-    width: 850px;
-    top: 300px;
-    left: 890px;
-    font-family: "Inter-Regular", Helvetica;
-    font-weight: 450;
-    color: #000000;
-    font-size: 25px;
-    letter-spacing: 0;
-    line-height: normal;
-    line-height: 1.7;
+    font-size: 22px;
+    font-family: 'Poppins';
 }
-  
-.paragraph2 {
+
+.button2{
+    background-color: #ffffffac;
+    margin-left: 970px;
+    height: 55px;
+    width: 60px;
+    border-radius: 15px;
+    text-align: center;
+    margin-top: 23px;
     position: absolute;
-    width: 850px;
-    top: 300px;
-    left: 890px;
-    font-family: "Inter-Regular", Helvetica;
-    font-weight: 450;
+    font-size: 22px;
+    font-family: 'Poppins';
+}
+
+.shortBy{
     color: #ffffff;
-    font-size: 25px;
-    letter-spacing: 0;
-    line-height: normal;
-    line-height: 1.7;
+    position: absolute;
+    margin-left: 1090px;
+    margin-top: 30px;
+    font-size: 20px;
+    font-family: 'Poppins';
 }
+
+.show{
+    color: #ffffff;
+    position: absolute;
+    margin-left: 890px;
+    margin-top: 30px;
+    font-size: 20px;
+    font-family: 'Poppins';
+}
+
+.showing{
+    color: #ffffff;
+    position: absolute;
+    margin-left: 300px;
+    margin-top: 30px;
+    font-size: 16px;
+    font-family: 'Poppins';   
+}
+
+.mony{
+    margin-top: 160px;
+    font-size: 25px;
+    color: #0000004d;
+    font-weight: 500;
+}
+
+.monyB{
+    margin-top: 160px;
+    font-size: 25px;
+    color: #07fafa;
+    font-weight: 500;
+}
+
+.money2{
+    margin-left: 960px;
+    margin-top: 160px;
+    font-size: 25px;
+    color: #0000004d;
+    font-weight: 500;
+}
+
+.review{
+    font-size: 15px;
+    font-family: 'Poppins'; 
+    color: #767676;
+    position: absolute;
+    margin-top: 210px;
+    margin-left: 940px;
+}
+
+.icons{
+    /* hoe om dit grooter te maak */
+    position: absolute;
+    width: 130px;
+    margin-top: 210px;
+    margin-left: 760px;
+    color: #fff700;
+}
+
+.vertical-line {
+    position: absolute;
+    width: 20px;
+    height: 20px; 
+    margin-top: ;
+}
+
+.flexContainerFooter{
+    display:flex;
+    flex-direction: row;
+    text-align: justify;
+    justify-content: center;
+    align-items: center;
+}
+
+.flexItem4 img{
+    margin-left: 320px;
+    margin-top: 5px;
+    width: 100%;
+    border-radius: 5%;
+    height: 80px;
+    width: 80px;
+}
+
+.flexItem4{
+    width: 6%;
+}
+
+.h1Footer{
+    font-size: 19px;
+    font-family: 'Poppins';
+    margin-left: 900px;
+}
+
+.h2Footer{
+    font-size: 19px;
+    font-family: 'Poppins';
+    margin-left: 600px;
+}
+
+.company{
+    font-size: 17px;
+    font-family: 'Poppins';
+    font-weight: 400;
+    margin-top: 170px;
+    margin-left: 600px;
+    color: #535252;
+    line-height: 2;
+
+}
+
+hr{
+    margin-top: 40px;
+}
+
+.flexContainer4{
+    display:flex;
+    flex-direction: column;
+    text-align: justify;
+    justify-content: center;
+}
+
+hr{
+    width: 80%
+}
+
+.footer1{
+    margin-left: 1080px;
+    padding: 40px 15px;
+    font-size: 15px;
+    font-family: 'Poppins';
+    margin-top: -20px;
+}
+
+.footer2{
+    padding: 40px 15px;
+    width: 80%;
+    font-size: 15px;
+    font-family: 'Poppins';
+    margin-top: -120px;
+    margin-left: 140px;
+}
+
+.logo img{
+    max-width: 100%;
+    width: 300px;
+    margin-top: 100px;
+    margin-left: 150px;
+}
+
+.offering{
+    font-size: 18px;
+    color: #535252;
+    font-family: 'Poppins';
+    font-weight: 500;
+    margin-top: -0.2px;
+    margin-left: 150px;
+    width: 300px;
+}
+
+
+
+
