--- a/scc/main.css
+++ b/scc/main.css
@@ -3,16 +3,15 @@ body {
 }
 
 .bg-img {
-    background-image: url("/assets/HomePage.png");
-    height: 1100px;
+    background-image: url("../assets/HomePage.png");
+    height: 900px;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
 }
-  
+
 .container {
     position: absolute;
-    margin-top: 40px;
-    width: auto;
+    margin-top: 50px;
     margin-left: 100px;
 }
   
@@ -23,7 +22,7 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 20px 40px;
-    width: 1800px;
+    width: 130%;
     border-radius: 40px;
 }
   
@@ -70,7 +69,7 @@ body {
 }
 
 .search-form input[type="text"] {
-    padding: 8px 30px 8px 8px; 
+    padding: 8px 0px 8px 7px; 
     border: 1px solid #ccc;
     border-radius: 4px;
     width: 200px; 
@@ -84,293 +83,378 @@ body {
     transform: translateY(-50%);
     color: #333;
     cursor: pointer;
-}
+} 
 
 .red-heading {
     position: absolute;
-    bottom: 0;
-    left: 0;
+    margin-top: 13em;
     margin-left: 100px;
     color: #E51728;
-    font-size: 60px;
-    margin-bottom: 35px; 
+    font-size: 48px;
     font-family: 'Porter Sans Block', sans-serif;
 }
 
-.frame .div {
+.h2{
+    position: absolute;
+    margin-top: 38em;
+    margin-left: 110px;
+    color: #550b92;
+    font-size: 20px;
+    font-family: 'poppins', medium;
+    font-weight: 800;
+}
+
+.flexContainer{
+    display:flex;
+    flex-direction: row;
+    font-size: 16px;
+    text-align: justify;
+    justify-content: center;
+    align-items: center;
+}
+
+.frame {
     background-color: #4d0575;
     width: 100%;
-    height: 65em;
-    position: relative;
+    height: 65em; 
 }
 
-.heading {
-    position: absolute;
-    width: 900px;
-    top: 230px;
-    left: 1100px;
-    font-family: "Porter sans", Helvetica;
-    color: #ffffff;
-    font-size: 60px;
-    letter-spacing: 0;
-    line-height: normal;
+.flexitem1{
+    padding: 25px;
+    margin-top: 300px;
 }
-
-.images {
-    width: 800px;
-    height: 800px;
-    top: 8em;
-    left: 10em;
-    position: absolute;
-}
-
-.paragraph {
-    position: absolute;
-    width: 600px;
-    top: 400px;
-    left: 1100px;
-    font-family: "Porter sans", Helvetica;
-    font-weight: 400;
-    color: #ffffff;
-    font-size: 25px;
-    letter-spacing: 0;
-    line-height: 1.7;
-}
-
-.button {
-    margin-left: 1100px;
-    margin-top: 730px;
-    cursor: pointer;
-    height: 99px;
-    width: 300px;
-    border: none;
-    background-color: #E51728;
-    color:#ffffff ;
-    padding: 10px;
-    font-size: 30px;
-    border-radius:10px ;
-}
-
-.frame2 .div2 {
-    background-color: #ffffff;
+  
+.flexitem1 img{
     width: 100%;
-    height: 55em;
-    position: relative;
+    height: 400px; 
+    object-fit: cover;
+    overflow: hidden;
+    border-radius: 20px;
 }
 
-.images2 {
-    width: 700px;
-    height: 600px;
-    top: 8em;
-    left: 70em;
+.sneakPeak{
+    font-size: 18px ;
+    margin-top: 35px;
+    margin-left: 650px;
+    color: #09c8d2;
     position: absolute;
+    font-family: 'Poppins';
 }
 
-.heading2 {
+.explain{
+    font-size: 5px ;
+    margin-top: 35px;
+    margin-left: 650px;
+    color: #09c8d2;
     position: absolute;
-    width: 600px;
-    top: 230px;
-    left: 200px;
-    font-family: "Porter sans", Helvetica;
-    font-weight: 790;
-    color: #000000;
+    font-family: 'Poppins';
+}
+
+.bigHeading{
+    position: absolute;
     font-size: 48px;
-    letter-spacing: 0;
-    line-height: normal;
-}
-
-.paragraph2 {
-    position: absolute;
-    width: 550px;
-    top: 400px;
-    left: 200px;
-    font-family: "Porter sans", Helvetica;
-    font-weight: 400;
-    color: #545454;
-    font-size: 25px;
-    letter-spacing: 0;
-    line-height: normal;
-    line-height: 1.7;
-}
-
-.frame3 .div3 {
-    background-color: #4d0575;
-    width: 100%;
-    height: 90em;
-    position: relative;
-}
-
-.images3 {
-    width: 70px;
-    height: 60px;
-    top: 800px;
-    left: 70em;
-    position: absolute;
-}
-
-.heading3 {
-    position: absolute;
-    width: 800px;
-    top: 70px;
-    left: 780px;
-    font-family: 'Porter sans ', Helvetica;
-    font-weight: 790;
-    color: #ffffff;
-    font-size: 55px;
-    letter-spacing: 0;
-    line-height: normal;
-}
-
-.headingtjie{
-    position: absolute;
-    width: 800px;
-    top: 70px;
-    left: 160px;
-    font-family: 'Porter sans ', Helvetica;
-    font-weight: 790;
-    color: #ffffff;
-    font-size: 55px;
-    letter-spacing: 0;
-    line-height: 1.7;
-}
-
-.paragraph3 {
-    position: absolute;
-    width: 550px;
-    top: 400px;
-    left: 200px;
-    font-family: "Porter sans", Helvetica;
-    font-weight: 300;
-    color: #545454;
-    font-size: 25px;
-    letter-spacing: 0;
-    line-height: normal;
-    line-height: 1.7;
-}
-
-.button3 {
-    margin-left: 1000px;
-    margin-top:1260px;
-    cursor: pointer;
-    height: 100px;
-    width: 320px;
-    border: none;
-    background-color: #E51728;
-    color:#ffffff ;
-    padding: 10px;
-    font-size: 30px;
-    border-radius: 15px;
+    font-family: 'Poppins';
     font-weight: 700;
+    margin-top: 60px;
+    margin-left: 450px;
+    color: #ffffff;
 }
 
-.frame4 .div4 {
-    background-color: #ffffff;
-    width: 100%;
-    height: 25em;
-    position: relative;
-}
-
-.images4 {
-    width: 380px;
-    height: 70px;
-    top: 90px;
-    left: 200px;
+.underHeading{
     position: absolute;
-}
-
-.heading4 {
-    position: absolute;
-    width: 350px;
-    top: 180px;
-    left: 200px;
-    font-family: 'Porter sans', Helvetica;
-    font-weight: 500;
-    color: #7A7A7A;
-    font-size: 25px;
-    letter-spacing: 0;
-    line-height: 1.7;
-}
-
-.paragraph4 {
-    position: absolute;
-    width: 550px;
-    top: 400px;
-    left: 200px;
-    font-family: "Porter sans", Helvetica;
-    font-weight: 300;
-    color: #545454;
-    font-size: 25px;
-    letter-spacing: 0;
-    line-height: normal;
-    line-height: 1.7;
-}
-
-.co{
-    position: absolute;
-    width: 300px;
-    top: 72px;
-    left: 870px;
-    font-family: 'Porter sans', Helvetica;
-    font-weight: 500;
-    color: #000000;
-    font-size: 30px;
-    letter-spacing: 0;
-    line-height: normal;
-    
-}
-
-.under{
-    position: absolute;
-    width: 300px;
-    top: 170px;
-    left: 870px;
-    font-family: 'Porter sans', Helvetica;
-    font-weight: 500;
-    color: #7A7A7A;
-    font-size: 25px;
-    letter-spacing: 0;
-    line-height: normal;
+    font-size: 48px;
+    font-family: 'Poppins';
+    font-weight: 700;
+    margin-top: 110px;
+    margin-left: 600px;
+    color: #ffffff;
     line-height: 2;
 }
 
-.social{
-    position: absolute;
+.smallHeading-container {
+    display: flex; 
+}
+
+.smallHeading-container p {
+    text-align: center;
+    margin-top: -300px;
+    flex: 2;
+    font-size: 25px;
+    font-family: 'Poppins',medium;
+    color: #ffffff;
+    font-weight: 600;
+}
+
+.mars{
+    text-align: center;
     width: 300px;
-    top: 72px;
-    left: 1220px;
-    font-family: 'Porter sans', Helvetica;
-    font-weight: 540;
-    color: #000000;
-    font-size: 30px;
-    letter-spacing: 0;
-    line-height: normal;
+    color: #ffffff;
+    margin-top: 80px;
+    margin-left: 40px;
+    font-size: 16px;
+    font-family: 'Poppins';
 }
 
-p{
-    font-size: 20px;
-    color: #09c8d2;
+.neptune{
+    margin-top: -64px;
+    position: absolute;
+    text-align: center;
+    width: 300px;
+    color: #ffffff;
+    margin-left: 410px;
+    font-size: 16px;
+    font-family: 'Poppins';
 }
 
-.upcoming {
-    font-size: 22px;
-    color: #09c8d2;
+.jupiter{
+    margin-top: -64px;
+    position: absolute;
+    text-align: center;
+    width: 300px;
+    color: #ffffff;
+    margin-left: 800px;
+    font-size: 16px;
+    font-family: 'Poppins';
+}
+
+.saturn{
+    margin-top: -64px;
+    position: absolute;
+    text-align: center;
+    width: 300px;
+    color: #ffffff;
+    margin-left: 1200px;
+    font-size: 16px;
+    font-family: 'Poppins';
+}
+
+.flexContainerFooter{
+    display:flex;
+    flex-direction: row;
+    text-align: justify;
+    justify-content: center;
+    align-items: center;
+}
+
+.flexItem4 img{
+    margin-left: 320px;
+    margin-top: 130px;
+    width: 100%;
+    border-radius: 5%;
+    height: 80px;
+    width: 80px;
+}
+
+.flexItem4{
+    width: 6%;
+}
+
+.h1Footer{
+    position: absolute;
+    margin-top: 70px;
+    font-size: 19px;
+    font-family: 'Poppins';
+    margin-left: 900px;
+}
+
+.h2Footer{
+    position: absolute;
+    margin-top: 70px;
+    font-size: 19px;
+    font-family: 'Poppins';
+    margin-left: 600px;
+}
+
+.company{
+    position: absolute;
+    margin-top: 120px;
+    font-size: 17px;
+    font-family: 'Poppins';
     font-weight: 400;
-    margin-left: 200px;
+    margin-top: px;
+    margin-left: 600px;
+    color: #535252;
+    line-height: 2;
 }
 
+.flexContainer4{
+    display:flex;
+    flex-direction: column;
+    text-align: justify;
+    justify-content: center;
+}
 
+.logo img{
+    position: absolute;
+    margin-top: 70px;
+    max-width: 100%;
+    width: 300px;
+    margin-top: px;
+    margin-left: 150px;
+}
 
-
-
-
-
-
-
-
-
-
+.offering{
+    line-height: 1.5;
+    position: absolute;
+    font-size: 18px;
+    color: #535252;
+    font-family: 'Poppins';
+    font-weight: 500;
+    margin-top: 130px;
+    margin-left: 150px;
+    width: 300px;
+}
 
 hr{
-    width: 50%;
+    margin-left: 150px;
+    position: absolute;
+    margin-top: 90px;
+    width: 80%;
 }
 
+.footer1{
+    margin-left: 1080px;
+    padding: 40px 15px;
+    font-size: 15px;
+    font-family: 'Poppins';
+    margin-top: 70px;
+}
+
+.footer2{
+    padding: 40px 15px;
+    width: 80%;
+    font-size: 15px;
+    font-family: 'Poppins';
+    margin-top: -120px;
+    margin-left: 140px;
+}
+
+.bgColour {
+    background-color: #45016E;
+    width: 100%;
+    height: 50em;
+    position: relative;
+}
+
+.flexContainer{
+    display:flex;
+    flex-direction: row;
+    font-size: 18px;
+    text-align: justify;
+    justify-content: center;
+    align-items: center;
+}
+
+.paragraph{
+    line-height: 35px;
+    text-align: left;
+    color: #ffffff;
+    margin-top: 100px;
+    margin-left: 50px;
+    width: 480px;
+}
+  
+.flexitem2{
+    margin-top: 80px;
+    font-family: 'Poppins';
+    margin-right: 50px;
+    flex: 50%;
+}
+
+.flexitem2 img{
+   margin-left: 100px;
+}
+
+.about{
+    margin-left: 810px;
+    color: #55DAEB;
+    position: absolute;
+    width: 600px;
+    margin-top: 110px;
+    font-family: 'Poppins';
+    font-size: 18px;
+    line-height: 50px;
+    font-weight: 500;
+}
+
+h2{
+    color: #ffffff;
+    position: absolute;
+    margin-top: 170px;
+    margin-left: 810px;
+    margin-right: 80px;
+    font-family: 'Poppins';
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 50px;
+}
+
+button {
+    margin-left: 50px;
+    margin-top: 20px;
+    cursor: pointer;
+    height: 70px;
+    width: 270px;
+    background-color: #ff0015;
+    color:#ffffff ;
+    font-size: 20px;
+    border-radius:12px ;
+    font-family: 'Poppins', semibold;
+}
+
+.bgColour1 {
+    background-color: #ffffff;
+    width: 100%;
+    height: 43em;
+    position: relative;
+}
+
+.about2{
+    margin-left: 170px;
+    color: #55DAEB;
+    position: absolute;
+    width: 600px;
+    margin-top: 160px;
+    font-family: 'Poppins';
+    font-size: 18px;
+    line-height: 50px;
+    font-weight: 500;
+}
+
+h3{
+    margin-left: 170px;
+    color: #000000;
+    position: absolute;
+    width: 600px;
+    margin-top: 220px;
+    font-family: 'Poppins';
+    font-size: 48px;
+    line-height: 50px;
+} 
+
+.flexitem3 {
+    margin-right: 300px ;
+    width: 80%;
+    border-radius: 5%;
+    height: 649px;
+} 
+
+.paragraph2{
+    position: absolute;
+    font-family: 'Poppins';
+    font-size: 18px;
+    width: 460px;
+    line-height: 29px;
+    text-align: left;
+    color: #000000;
+    margin-top: 340px;
+    margin-left: 170px;
+}
+
+.flexitem3 img{  
+    margin-top: 120px;
+    margin-left: 800px;
+    width: 70%;
+    border-radius: 5%;
+    height: 477px;
+}
