--- a/scc/flights.css
+++ b/scc/flights.css
@@ -8,6 +8,15 @@ body {
     background-repeat: no-repeat;
     background-size: 100%;
 }
+
+.overImage{
+    color: #ffffff;
+    font-size: 48px;
+    font-family: 'Porter Sans Block', sans-serif;
+    margin-top: 90px;
+    margin-left: 400px;
+}
+
 .container {
     position: absolute;
     margin-top: 50px;
@@ -21,7 +30,7 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 20px 40px;
-    width: 130%;
+    width: 125%;
     border-radius: 40px;
 }
   
@@ -77,7 +86,6 @@ body {
 
 .search-form i {
     position: absolute;
-   
     top: 50%;
     transform: translateY(-50%);
     color: #333;
@@ -170,7 +178,7 @@ button {
 .buttonSmall{
     margin-top: 140px;
     cursor: pointer;
-    height: 70px;
+    height: 48px;
     width: 100px;
     background-color: #45016E;
     color: #ffffff;
@@ -178,6 +186,8 @@ button {
     border-radius:12px ;
     font-family: 'Poppins', semibold;
     float: left;
+    padding-left: 50px;
+    padding-top: 20px;
 }
 
 .line{
@@ -255,53 +265,57 @@ button {
     margin-top: 160px;
     color: #535252;
     margin-left: 90px;
-} 
+}
 
 
 .buttonSmall2{
     margin-top: 140px;
     cursor: pointer;
-    height: 70px;
+    height: 48px;
     width: 100px;
-    background-color: #51BFD8;
     color: #ffffff;
     font-size: 20px;
     border-radius:12px ;
     font-family: 'Poppins', semibold;
     float: left;
+    padding-left: 50px;
+    padding-top: 20px;
+    background-color: #51BFD8;
 }
 
 .button1{
     background-color: #ffffffac;
     margin-left: 1200px;
-    height: 55px;
+    height: 50px;
     width: 190px;
     border-radius: 15px;
     text-align: center;
-    margin-top: 23px;
+    margin-top: 20px;
     position: absolute;
     font-size: 22px;
     font-family: 'Poppins';
+   padding-top: 15px;
 }
 
 .button2{
     background-color: #ffffffac;
     margin-left: 970px;
-    height: 55px;
+    height: 50px;
     width: 60px;
     border-radius: 15px;
     text-align: center;
-    margin-top: 23px;
+    margin-top: 20px;
     position: absolute;
     font-size: 22px;
     font-family: 'Poppins';
+    padding-top: 15px;
 }
 
 .shortBy{
     color: #ffffff;
     position: absolute;
     margin-left: 1090px;
-    margin-top: 30px;
+    margin-top: 35px;
     font-size: 20px;
     font-family: 'Poppins';
 }
@@ -310,7 +324,7 @@ button {
     color: #ffffff;
     position: absolute;
     margin-left: 890px;
-    margin-top: 30px;
+    margin-top: 35px;
     font-size: 20px;
     font-family: 'Poppins';
 }
@@ -319,8 +333,8 @@ button {
     color: #ffffff;
     position: absolute;
     margin-left: 300px;
-    margin-top: 30px;
-    font-size: 16px;
+    margin-top: 35px;
+    font-size: 18px;
     font-family: 'Poppins';   
 }
 
@@ -355,20 +369,21 @@ button {
     margin-left: 940px;
 }
 
+.vertical-line{
+    margin-left: 910px;
+    position: absolute;
+    margin-top: 208px;
+    height: 30px;
+    width: 2px;
+    background-color: #a5a5a5;
+}
+
 .icons{
-    /* hoe om dit grooter te maak */
     position: absolute;
     width: 130px;
     margin-top: 210px;
     margin-left: 760px;
     color: #fff700;
-}
-
-.vertical-line {
-    position: absolute;
-    width: 20px;
-    height: 20px; 
-    margin-top: ;
 }
 
 .flexContainerFooter{
