--- a/scc/flights.css
+++ b/scc/flights.css
@@ -105,8 +105,7 @@ body {
     padding: 20%;
     width: 65%;
     border-radius: 5%;
-    height: 650px;
-    margin-top: -70px;
+    margin-top: -100px;
 }
   
 .flexitem2{
@@ -162,7 +161,7 @@ h2{
     position: relative;
 }
 
-button {
+.Submit {
     margin-top: 140px;
     margin-left: 20px;
     cursor: pointer;
@@ -186,7 +185,7 @@ button {
     border-radius:12px ;
     font-family: 'Poppins', semibold;
     float: left;
-    padding-left: 50px;
+    padding-left: 30px;
     padding-top: 20px;
 }
 
@@ -278,9 +277,23 @@ button {
     border-radius:12px ;
     font-family: 'Poppins', semibold;
     float: left;
-    padding-left: 50px;
+    padding-left: 30px;
     padding-top: 20px;
     background-color: #51BFD8;
+}
+
+.incres{
+    border: none;
+    font-size: 20px;
+    background-color: #51bfd800;
+    color: #ffffff;
+}
+
+.decres{
+    border: none;
+    font-size: 20px;
+    background-color: #51bfd800;
+    color: #ffffff;
 }
 
 .button1{
@@ -427,7 +440,7 @@ button {
     margin-left: 600px;
     color: #535252;
     line-height: 2;
-
+    text-decoration: none;
 }
 
 hr{
